try another contrast fix

--- a/src/postcss/styles.css
+++ b/src/postcss/styles.css
@@ -52,8 +52,8 @@
   @apply dark:border-coolGray-700;
   @apply mb-4;
   @apply text-2xl;
-  @apply text-coolGray-800;
-  @apply text-coolGray-400;
+  @apply text-coolGray-600;
+  @apply dark:text-coolGray-400;
   @apply font-bold;
 }
 
